tekton/ci/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: 'webhook.ci.infra.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1M
  name: github-webhook
spec:
  ingressClassName: nginx
  tls:
  - secretName: webhook-ci-dogfooding-tekton-dev-tls
    hosts:
    - webhook.ci.infra.tekton.dev
  rules:
  - host: webhook.ci.infra.tekton.dev
    http:
      paths:
      - backend:
          service:
            name: el-tekton-ci
            port:
              number: 8080
        path: /
        pathType: Prefix
